tests/fixtures/lua54/errors/non_literal_require/input/main.lua
local varname = "something"
local x = require(varname)

return x
